Fix right column padding issue (bug causing wrap)

--- a/src/GeoNodePy/geonode/static/theme/custom.css
+++ b/src/GeoNodePy/geonode/static/theme/custom.css
@@ -41,6 +41,8 @@ div#main {
 
 .threecol {
 	background: none;
+	margin: 0 0 0 10px;
+	padding: 10px 0 10px 20px;
 }
 
 #data_block {
